--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -11,7 +11,7 @@
 
     <artifactId>anwendung</artifactId>
 
-    <!--<packaging>war</packaging>-->
+    <packaging>war</packaging>
 
     <dependencies>
 
@@ -22,8 +22,8 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>com.github.haschi.haushaltsbuch</groupId>-->
-            <!--<artifactId>infrastruktur</artifactId>-->
+        <!--<groupId>com.github.haschi.haushaltsbuch</groupId>-->
+        <!--<artifactId>infrastruktur</artifactId>-->
         <!--</dependency>-->
 
         <!-- Abhängigkeiten zu Bibliotheken -->
@@ -34,19 +34,19 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>de.larmic.butterfaces</groupId>-->
-            <!--<artifactId>components-mojarra</artifactId>-->
-            <!--<version>1.10.6</version>-->
+        <!--<groupId>de.larmic.butterfaces</groupId>-->
+        <!--<artifactId>components-mojarra</artifactId>-->
+        <!--<version>1.10.6</version>-->
         <!--</dependency>-->
 
         <!--<dependency>-->
-            <!--<groupId>org.axonframework</groupId>-->
-            <!--<artifactId>axon-core</artifactId>-->
+        <!--<groupId>org.axonframework</groupId>-->
+        <!--<artifactId>axon-core</artifactId>-->
         <!--</dependency>-->
 
         <!--<dependency>-->
-            <!--<groupId>org.hibernate</groupId>-->
-            <!--<artifactId>hibernate-core</artifactId>-->
+        <!--<groupId>org.hibernate</groupId>-->
+        <!--<artifactId>hibernate-core</artifactId>-->
         <!--</dependency>-->
 
 
@@ -64,16 +64,16 @@
             <scope>provided</scope>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>com.github.kamaladafrica</groupId>-->
-            <!--<artifactId>axon-cdi</artifactId>-->
-            <!--<version>master</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>com.github.kamaladafrica</groupId>
+            <artifactId>axon-cdi</artifactId>
+            <version>master</version>
+        </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>org.jboss.spec.javax.faces</groupId>-->
-            <!--<artifactId>jboss-jsf-api_2.2_spec</artifactId>-->
-            <!--<scope>provided</scope>-->
+        <!--<groupId>org.jboss.spec.javax.faces</groupId>-->
+        <!--<artifactId>jboss-jsf-api_2.2_spec</artifactId>-->
+        <!--<scope>provided</scope>-->
         <!--</dependency>-->
 
         <!-- OK -->
@@ -84,9 +84,9 @@
         </dependency>
 
         <!--<dependency>-->
-            <!--<groupId>org.jboss.spec.javax.ejb</groupId>-->
-            <!--<artifactId>jboss-ejb-api_3.2_spec</artifactId>-->
-            <!--<scope>provided</scope>-->
+        <!--<groupId>org.jboss.spec.javax.ejb</groupId>-->
+        <!--<artifactId>jboss-ejb-api_3.2_spec</artifactId>-->
+        <!--<scope>provided</scope>-->
         <!--</dependency>-->
 
         <dependency>
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <classifier>${groovy.classifier}</classifier>
+            <classifier>indy</classifier>
         </dependency>
 
         <dependency>
@@ -209,60 +209,45 @@
     <build>
         <plugins>
             <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-war-plugin</artifactId>-->
-                <!--<version>2.6</version>-->
-                <!--<configuration>-->
-                    <!--<failOnMissingWebXml>false</failOnMissingWebXml>-->
-                <!--</configuration>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-war-plugin</artifactId>-->
+            <!--<version>2.6</version>-->
+            <!--<configuration>-->
+            <!--<failOnMissingWebXml>false</failOnMissingWebXml>-->
+            <!--</configuration>-->
             <!--</plugin>-->
             <!--<plugin>-->
-                <!--<groupId>org.wildfly.plugins</groupId>-->
-                <!--<artifactId>wildfly-maven-plugin</artifactId>-->
-                <!--<version>1.1.0.Alpha6</version>-->
-                <!--<executions>-->
-                    <!--<execution>-->
-                        <!--<phase>install</phase>-->
-                        <!--<goals>-->
-                            <!--<goal>deploy</goal>-->
-                        <!--</goals>-->
-                        <!--<configuration>-->
-                            <!--<password>matthias</password>-->
-                            <!--<username>matthias</username>-->
-                        <!--</configuration>-->
-                    <!--</execution>-->
-                <!--</executions>-->
+            <!--<groupId>org.wildfly.plugins</groupId>-->
+            <!--<artifactId>wildfly-maven-plugin</artifactId>-->
+            <!--<version>1.1.0.Alpha6</version>-->
+            <!--<executions>-->
+            <!--<execution>-->
+            <!--<phase>install</phase>-->
+            <!--<goals>-->
+            <!--<goal>deploy</goal>-->
+            <!--</goals>-->
+            <!--<configuration>-->
+            <!--<password>matthias</password>-->
+            <!--<username>matthias</username>-->
+            <!--</configuration>-->
+            <!--</execution>-->
+            <!--</executions>-->
             <!--</plugin>-->
 
             <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-ejb-plugin</artifactId>-->
-                <!--<version>2.5.1</version>-->
-                <!--<configuration>-->
-                    <!--<ejbVersion>3.1</ejbVersion>-->
-                    <!--<archive>-->
-                        <!--<manifest>-->
-                            <!--<addClasspath>true</addClasspath>-->
-                        <!--</manifest>-->
-                    <!--</archive>-->
-                <!--</configuration>-->
+            <!--<groupId>org.apache.maven.plugins</groupId>-->
+            <!--<artifactId>maven-ejb-plugin</artifactId>-->
+            <!--<version>2.5.1</version>-->
+            <!--<configuration>-->
+            <!--<ejbVersion>3.1</ejbVersion>-->
+            <!--<archive>-->
+            <!--<manifest>-->
+            <!--<addClasspath>true</addClasspath>-->
+            <!--</manifest>-->
+            <!--</archive>-->
+            <!--</configuration>-->
             <!--</plugin>-->
 
-            <!-- OK -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <executions>
-
-
-                    <execution>
-                        <goals>
-                            <goal>test-jar</goal>
-
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
         </plugins>
     </build>
 
