--- a/pom.xml
+++ b/pom.xml
@@ -25,27 +25,20 @@
         <!-- Benutze die selbe Checkstype Version, wie das IntelliJ Plugin ! -->
         <checkstyle.version>6.14.1</checkstyle.version>
 
-        <!-- Version für die Codierungunterastützung mit Richtlinien und Aspekten -->
-        <version.com.github.haschi.coding>0.0.26-SNAPSHOT</version.com.github.haschi.coding>
-
-
         <version.deltaspike>1.5.2</version.deltaspike>
-        <version.weld.se>2.3.1.Final</version.weld.se>
+
 
         <slf4j.version>1.7.13</slf4j.version>
         <junit.version>4.12</junit.version>
         <oleaster.version>0.1.3-SNAPSHOT</oleaster.version>
         <maven.dependency.plugin.version>2.10</maven.dependency.plugin.version>
         <maven.surefire.plugin.version>2.18.1</maven.surefire.plugin.version>
-        <aspectj.version>1.8.9</aspectj.version>
 
         <skipTests>false</skipTests>
-        <groovy.version>2.4.5</groovy.version>
-        <groovy.classifier>indy</groovy.classifier>
-
         <h2.version>1.4.190</h2.version>
         <hibernate.version>5.0.7.Final</hibernate.version>
         <version.jboss.bom>10.0.1.Final</version.jboss.bom>
+        <aspectj.version>1.8.9</aspectj.version>
     </properties>
 
     <scm>
@@ -55,6 +48,41 @@
 
     <dependencyManagement>
         <dependencies>
+
+            <!-- BOM -->
+            <dependency>
+                <groupId>com.github.haschi</groupId>
+                <artifactId>infrastructure-bom</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.haschi</groupId>
+                <artifactId>testing-bom</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.haschi</groupId>
+                <artifactId>building</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.github.haschi</groupId>
+                <artifactId>coding-bom</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <!-- Eigene Module -->
             <dependency>
                 <groupId>com.github.haschi.haushaltsbuch</groupId>
                 <artifactId>domaene</artifactId>
@@ -67,28 +95,6 @@
                 <version>${project.version}</version>
             </dependency>
 
-            <!-- auslagern nach test.bom -->
-            <dependency>
-                <groupId>org.assertj</groupId>
-                <artifactId>assertj-core</artifactId>
-                <version>3.2.0</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- auslagern nach coding.bom -->
-            <dependency>
-                <groupId>com.github.haschi</groupId>
-                <artifactId>aspekte</artifactId>
-                <version>${version.com.github.haschi.coding}</version>
-            </dependency>
-
-            <!-- auslagern nach coding.bom -->
-            <dependency>
-                <groupId>org.apache.commons</groupId>
-                <artifactId>commons-lang3</artifactId>
-                <version>3.4</version>
-            </dependency>
-
             <!-- auslagern nach coding.bom -->
             <dependency>
                 <groupId>com.google.guava</groupId>
@@ -96,197 +102,6 @@
                 <!-- version>19.0</version -->
                 <version>14.0.1</version>
                 <!-- Höhere Versionen führen zu einem Konflikt im Zusammenhang mit Weld Embedded und Arquillian -->
-            </dependency>
-
-            <dependency>
-                <groupId>org.immutables</groupId>
-                <artifactId>value</artifactId>
-                <version>2.2.10</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.axonframework</groupId>
-                <artifactId>axon-core</artifactId>
-                <version>2.4.4</version>
-            </dependency>
-
-            <!-- auslagern nach jee.bom -->
-            <!--dependency>
-                <groupId>javax</groupId>
-                <artifactId>javaee-api</artifactId>
-                <version>7.0</version>
-                <scope>provided</scope>
-            </dependency-->
-
-            <dependency>
-                <groupId>org.wildfly.bom</groupId>
-                <artifactId>wildfly-javaee7</artifactId>
-                <version>${version.jboss.bom}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-
-            <!-- auslagern nach test.bom -->
-            <dependency>
-                <groupId>org.spockframework</groupId>
-                <artifactId>spock-core</artifactId>
-                <version>1.0-groovy-2.4</version>
-                <scope>test</scope>
-                <exclusions>
-                    <exclusion>
-                        <groupId>org.codehaus.groovy</groupId>
-                        <artifactId>groovy-all</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-
-            <!-- Spock: zum Mocken erforderlich -->
-            <!-- auslagern nach test.bom -->
-            <dependency>
-                <groupId>cglib</groupId>
-                <artifactId>cglib-nodep</artifactId>
-                <version>3.2.0</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy-all</artifactId>
-                <version>${groovy.version}</version>
-                <classifier>${groovy.classifier}</classifier>
-            </dependency>
-
-            <!-- auslagern nach test.bom -->
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- auslagern nach test.bom -->
-            <dependency>
-                <groupId>info.cukes</groupId>
-                <artifactId>cucumber-java8</artifactId>
-                <version>1.2.4</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- auslagern nach test.bom -->
-            <dependency>
-                <groupId>info.cukes</groupId>
-                <artifactId>cucumber-junit</artifactId>
-                <version>1.2.4</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.mscharhag.oleaster</groupId>
-                <artifactId>oleaster-runner</artifactId>
-                <version>${oleaster.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>com.mscharhag.oleaster</groupId>
-                <artifactId>oleaster-matcher</artifactId>
-                <version>${oleaster.version}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- auslagern nach test.bom -->
-            <dependency>
-                <groupId>info.cukes</groupId>
-                <artifactId>cucumber-weld</artifactId>
-                <version>1.2.4</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- auslagern nach test-bom -->
-            <dependency>
-                <groupId>nl.jqno.equalsverifier</groupId>
-                <artifactId>equalsverifier</artifactId>
-                <version>2.1.1</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- Test-Infrastruktur -->
-
-            <!-- Für die Integrationstests wird Deltaspike verwendet, weil Arquillian
-            nicht immer so gut funktioniert -->
-            <!-- auslagern nach jee-test.bom -->
-            <dependency>
-                <groupId>org.apache.deltaspike.core</groupId>
-                <artifactId>deltaspike-core-api</artifactId>
-                <version>${version.deltaspike}</version>
-                <scope>compile</scope>
-            </dependency>
-
-            <!-- auslagern nach jee-test.bom -->
-            <dependency>
-                <groupId>org.apache.deltaspike.core</groupId>
-                <artifactId>deltaspike-core-impl</artifactId>
-                <version>${version.deltaspike}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- auslagern nach jee.bom -->
-            <dependency>
-                <groupId>org.apache.deltaspike.cdictrl</groupId>
-                <artifactId>deltaspike-cdictrl-api</artifactId>
-                <version>${version.deltaspike}</version>
-                <scope>compile</scope>
-            </dependency>
-
-            <!-- auslagern nach jee.bom -->
-            <dependency>
-                <groupId>org.apache.deltaspike.modules</groupId>
-                <artifactId>deltaspike-jpa-module-api</artifactId>
-                <version>${version.deltaspike}</version>
-                <scope>compile</scope>
-            </dependency>
-
-            <!-- auslagern nach jee.bom -->
-            <dependency>
-                <groupId>org.apache.deltaspike.modules</groupId>
-                <artifactId>deltaspike-jpa-module-impl</artifactId>
-                <version>${version.deltaspike}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- auslagern nach jee-test.bom -->
-            <dependency>
-                <groupId>org.apache.deltaspike.modules</groupId>
-                <artifactId>deltaspike-test-control-module-api</artifactId>
-                <version>${version.deltaspike}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- auslagern nach jee-test.bom -->
-            <dependency>
-                <groupId>org.apache.deltaspike.modules</groupId>
-                <artifactId>deltaspike-test-control-module-impl</artifactId>
-                <version>${version.deltaspike}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- Dependency Injection für Java EE, Arquillian Wildfly Embedded und Deltaspike -->
-            <!-- auslagern nach jee-test.bom -->
-            <dependency>
-                <groupId>org.jboss.weld.se</groupId>
-                <artifactId>weld-se</artifactId>
-                <version>${version.weld.se}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <!-- Ohne das läuft nichts: org.jboss.jandex.ClassInfo.hasNoArgsConstructor()Z -->
-            <!-- siehe http://stackoverflow.com/questions/25797866/hibernate-makes-weld-not-initializing-in-java-se -->
-            <dependency>
-                <groupId>org.jboss</groupId>
-                <artifactId>jandex</artifactId>
-                <version>2.0.0.Final</version>
-                <scope>test</scope>
             </dependency>
 
             <!-- Alles für Arquillian -->
@@ -316,46 +131,10 @@
                 <version>${slf4j.version}</version>
                 <scope>test</scope>
             </dependency>
-
-            <!-- auslagern nach jee-test.bom -->
-            <dependency>
-                <groupId>org.apache.deltaspike.cdictrl</groupId>
-                <artifactId>deltaspike-cdictrl-weld</artifactId>
-                <version>${version.deltaspike}</version>
-                <scope>test</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.aspectj</groupId>
-                <artifactId>aspectjrt</artifactId>
-                <version>${aspectj.version}</version>
-            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
-
-
-        <!-- dependency>
-            <groupId>com.github.haschi</groupId>
-            <artifactId>aspekte</artifactId>
-        </dependency -->
-
-
-        <!-- Import the CDI API, we use provided scope as the API is included in WildFly -->
-        <!--dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
-            <scope>provided</scope>
-        </dependency-->
-        <!-- Import the Common Annotations API (JSR-250), we use provided scope
-        as the API is included in WildFly -->
-        <!--dependency>
-            <groupId>org.jboss.spec.javax.annotation</groupId>
-            <artifactId>jboss-annotations-api_1.2_spec</artifactId>
-            <scope>provided</scope>
-        </dependency-->
-        <!-- Import the Servlet API, we use provided scope as the API is included in WildFly -->
         <dependency>
             <groupId>org.jboss.spec.javax.servlet</groupId>
             <artifactId>jboss-servlet-api_3.1_spec</artifactId>
@@ -368,9 +147,6 @@
     </dependencies>
 
     <build>
-        <extensions>
-        </extensions>
-
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -427,78 +203,7 @@
                     <groupId>org.codehaus.mojo</groupId>
                     <version>2.0</version>
                 </plugin>
-                <!-- checkstyle -->
-                <!-- TODO: auslagern nach test.bom -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-checkstyle-plugin</artifactId>
-                    <version>2.17</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>com.puppycrawl.tools</groupId>
-                            <artifactId>checkstyle</artifactId>
-                            <version>${checkstyle.version}</version>
-                        </dependency>
-                        <dependency>
-                            <artifactId>richtlinien</artifactId>
-                            <groupId>com.github.haschi</groupId>
-                            <version>${version.com.github.haschi.coding}</version>
-                        </dependency>
-                    </dependencies>
-                    <configuration>
-                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
-                        <includeResources>true</includeResources>
-                        <detail>true</detail>
 
-                        <skip>${skipTests}</skip>
-                        <configLocation>codingrules/checkstyle.xml</configLocation>
-                        <failsOnError>true</failsOnError>
-                        <consoleOutput>true</consoleOutput>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>validate</id>
-                            <phase>process-classes</phase>
-                            <goals>
-                                <goal>check</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-
-                <!-- pmd -->
-                <!-- This version of Maven PMD Plugin uses PMD 5.3.2 and requires Java 1.6. -->
-                <!-- TODO: auslagern nach test.bom -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-pmd-plugin</artifactId>
-                    <version>3.6</version>
-                    <dependencies>
-                        <dependency>
-                            <artifactId>richtlinien</artifactId>
-                            <groupId>com.github.haschi</groupId>
-                            <version>${version.com.github.haschi.coding}</version>
-                        </dependency>
-                    </dependencies>
-
-                    <configuration>
-                        <skip>${skipTests}</skip>
-                        <linkXRef>false</linkXRef>
-                        <verbose>true</verbose>
-                        <includeTests>true</includeTests>
-                        <rulesets>
-                            <ruleset>codingrules/pmd-ruleset.xml</ruleset>
-                        </rulesets>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>check</goal>
-                                <goal>cpd-check</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
             </plugins>
         </pluginManagement>
         <plugins>
