--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -11,6 +11,8 @@
 
     <artifactId>anwendung</artifactId>
 
+    <name>${project.artifactId}-${project.version}</name>
+
     <packaging>war</packaging>
 
     <dependencies>
@@ -114,7 +116,6 @@
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-weld</artifactId>
-            <version>1.2.4</version>
             <scope>test</scope>
         </dependency>
 
@@ -208,46 +209,31 @@
 
     <build>
         <plugins>
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-war-plugin</artifactId>-->
-            <!--<version>2.6</version>-->
-            <!--<configuration>-->
-            <!--<failOnMissingWebXml>false</failOnMissingWebXml>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-            <!--<groupId>org.wildfly.plugins</groupId>-->
-            <!--<artifactId>wildfly-maven-plugin</artifactId>-->
-            <!--<version>1.1.0.Alpha6</version>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<phase>install</phase>-->
-            <!--<goals>-->
-            <!--<goal>deploy</goal>-->
-            <!--</goals>-->
-            <!--<configuration>-->
-            <!--<password>matthias</password>-->
-            <!--<username>matthias</username>-->
-            <!--</configuration>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
-
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-ejb-plugin</artifactId>-->
-            <!--<version>2.5.1</version>-->
-            <!--<configuration>-->
-            <!--<ejbVersion>3.1</ejbVersion>-->
-            <!--<archive>-->
-            <!--<manifest>-->
-            <!--<addClasspath>true</addClasspath>-->
-            <!--</manifest>-->
-            <!--</archive>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.1.0.Alpha6</version>
+                <executions>
+                    <execution>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                        <configuration>
+                            <password>matthias</password>
+                            <username>matthias</username>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
