--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -79,12 +79,17 @@
         <!--</dependency>-->
 
         <!-- OK -->
-        <dependency>
-            <groupId>javax.enterprise</groupId>
-            <artifactId>cdi-api</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+        <!--<groupId>javax.enterprise</groupId>-->
+        <!--<artifactId>cdi-api</artifactId>-->
+        <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>7.0</version>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.jboss.spec.javax.ejb</groupId>-->
         <!--<artifactId>jboss-ejb-api_3.2_spec</artifactId>-->
