--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -34,6 +34,12 @@
         </dependency>
 
         <dependency>
+            <groupId>com.github.haschi</groupId>
+            <artifactId>modeling</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        
+        <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
             <scope>provided</scope>
@@ -169,7 +175,28 @@
 
     <reporting>
         <plugins>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.4</version>
+                <configuration>
+                    <doclet>com.github.haschi.modelldokumentation.ListClasses</doclet>
+                    <docletArtifact>
+                        <artifactId>modelldokumentation</artifactId>
+                        <groupId>com.github.haschi</groupId>
+                        <version>0.0.26-SNAPSHOT</version>
+                    </docletArtifact>
+                    <useStandardDocletOptions>false</useStandardDocletOptions>
+                    <debug>true</debug>
+                    <additionalDependencies>
+                        <additionalDependency>
+                            <groupId>com.github.haschi</groupId>
+                            <artifactId>aspekte</artifactId>
+                            <version>0.0.26-SNAPSHOT</version>
+                        </additionalDependency>
+                    </additionalDependencies>
+                </configuration>
+            </plugin>
         </plugins>
     </reporting>
 
