Dokumentation des Modells

--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>modeling</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.haschi</groupId>
+            <artifactId>aspekte</artifactId>
+        </dependency>
+
         <!--<dependency>-->
         <!--<groupId>de.larmic.butterfaces</groupId>-->
         <!--<artifactId>components-mojarra</artifactId>-->
@@ -247,6 +253,11 @@
         </plugins>
     </build>
 
+    <reporting>
+        <plugins>
+
+        </plugins>
+    </reporting>
     <profiles>
     </profiles>
 
@@ -255,11 +266,14 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
             <name>Jitpack.io Repository</name>
+
             <releases>
                 <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
             </releases>
             <snapshots>
                 <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
             </snapshots>
         </repository>
 
