--- a/domaene/pom.xml
+++ b/domaene/pom.xml
@@ -186,7 +186,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.4</version>
                 <configuration>
-                    <doclet>com.github.haschi.modelldokumentation.ListClasses</doclet>
+                    <doclet>com.github.haschi.modelldokumentation.EventStormingModellDoclet</doclet>
                     <docletArtifact>
                         <artifactId>modelldokumentation</artifactId>
                         <groupId>com.github.haschi</groupId>
