--- a/anwendung/pom.xml
+++ b/anwendung/pom.xml
@@ -78,9 +78,8 @@
         </dependency>
 
         <dependency>
-            <groupId>com.github.kamaladafrica</groupId>
+            <groupId>it.kamaladafrica</groupId>
             <artifactId>axon-cdi</artifactId>
-            <version>master</version>
         </dependency>
 
         <!--<dependency>-->
@@ -231,21 +230,55 @@
                 <version>2.6</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <!--<outputDirectory>${project.build.directory}/docker</outputDirectory>-->
+                    <outputDirectory>${project.basedir}/docker</outputDirectory>
                 </configuration>
             </plugin>
+
             <plugin>
-                <groupId>org.wildfly.plugins</groupId>
-                <artifactId>wildfly-maven-plugin</artifactId>
-                <version>1.1.0.Alpha6</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.19.1</version>
                 <executions>
                     <execution>
-                        <phase>install</phase>
+                        <id>integration-1</id>
                         <goals>
-                            <goal>deploy</goal>
+                            <goal>integration-test</goal>
                         </goals>
                         <configuration>
-                            <password>matthias</password>
-                            <username>matthias</username>
+                            <argLine>-Dorg.apache.deltaspike.ProjectStage=IntegrationTest</argLine>
+                            <summaryFile>target/failsafe-reports/integration-1.xml</summaryFile>
+                            <includes>
+                                <include>domaene.Integrationstests.java</include>
+                            </includes>
+
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>backend</id>
+                        <goals>
+                            <goal>integration-test</goal>
+                        </goals>
+
+                        <configuration>
+                            <argLine>-Dorg.apache.deltaspike.ProjectStage=IntegrationTest</argLine>
+                            <summaryFile>target/failsafe-reports/integration-2.xml</summaryFile>
+                            <includes>
+                                <include>domaene.BackendTests.java</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+
+                    <execution>
+                        <id>verify</id>
+                        <goals>
+                            <goal>verify</goal>
+                        </goals>
+
+                        <configuration>
+                            <summaryFile>target/failsafe-reports/integration-1.xml</summaryFile>
+                            <summaryFile>target/failsafe-reports/integration-2.xml</summaryFile>
                         </configuration>
                     </execution>
                 </executions>
@@ -253,30 +286,27 @@
         </plugins>
     </build>
 
+
     <reporting>
         <plugins>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.19.1</version>
+                <reportSets>
+                    <reportSet>
+                        <id>integration-tests</id>
+                        <reports>
+                            <report>failsafe-report-only</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+            </plugin>
         </plugins>
     </reporting>
+
     <profiles>
     </profiles>
 
-    <repositories>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-            <name>Jitpack.io Repository</name>
-
-            <releases>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>never</updatePolicy>
-            </snapshots>
-        </repository>
-
-    </repositories>
 
 </project>
